objects/CTS_Integration_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description/ summary for the CTS Enterprise Service Bus (ESB) Endpoint URL record</description>
        <inlineHelpText>Description/ summary for the CTS Enterprise Service Bus (ESB) Endpoint URL record</inlineHelpText>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag/ indicator signifying if the integration record is active or not</description>
        <inlineHelpText>Flag/ indicator signifying if the integration record is active or not</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AsyncDelayInterval__c</fullName>
        <description>Defines the interval/ delay for batch records to create CTS tickets</description>
        <inlineHelpText>Defines the interval/ delay for batch records to create CTS tickets</inlineHelpText>
        <label>AsyncDelayInterval</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AsyncRetrievalSize__c</fullName>
        <description>Used to determine the number of records that should be retrieved overall for batch processing through the CTS Sync Service</description>
        <inlineHelpText>Used to determine the number of records that should be retrieved overall for batch processing through the CTS Sync Service</inlineHelpText>
        <label>Async Retrieval Size</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BatchSize__c</fullName>
        <description>Used to determine the batch size dynamically through the CTS Sync Service</description>
        <inlineHelpText>Used to determine the batch size dynamically through the CTS Sync Service</inlineHelpText>
        <label>Batch Size</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTScrmId__c</fullName>
        <description>UUID used to define the requesting CRM system when a ticket is created through the CTS ESB service</description>
        <inlineHelpText>UUID used to define the requesting CRM system when a ticket is created through the CTS ESB service</inlineHelpText>
        <label>CTS CRM Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESBapiAccessKey__c</fullName>
        <description>CTS ESB API Access Key used for securing the endpoint for only valid requests</description>
        <inlineHelpText>CTS ESB API Access Key used for securing the endpoint for only valid requests</inlineHelpText>
        <label>ESB API Access Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefaultContactId__c</fullName>
        <description>Default Contact Id (WhoId) used for rendering Email Template; Savepoint sp = Database.setSavepoint(); Messaging.sendEmail(new Messaging.SingleEmailMessage[] {mail}); Database.rollback(sp);</description>
        <inlineHelpText>Default Contact Id (WhoId) used for rendering Email Template; Savepoint sp = Database.setSavepoint(); Messaging.sendEmail(new Messaging.SingleEmailMessage[] {mail}); Database.rollback(sp);</inlineHelpText>
        <label>Default Contact Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestedService__c</fullName>
        <description>The CTS Ticket creation API version (XML, JSON)</description>
        <inlineHelpText>The CTS Ticket creation API version (XML, JSON)</inlineHelpText>
        <label>Requested Service</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <description>Integration Settings for the Salesforce to CTS configurations</description>
    <label>CTS Integration Setting</label>
    <pluralLabel>CTS Integration Settings</pluralLabel>
</CustomObject>